--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>weiss.ch</groupId>
+  <groupId>ch.rweiss</groupId>
   <artifactId>jmx-cli</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>0.0.3-SNAPSHOT</version>
     <build>
     <plugins>
       <plugin>
@@ -39,14 +39,14 @@
       <version>2.1.0</version>
     </dependency>
     <dependency>
-      <groupId>ch.weiss</groupId>
+      <groupId>ch.rweiss</groupId>
       <artifactId>ansi-terminal-chart</artifactId>
-      <version>0.0.2-SNAPSHOT</version>
+      <version>0.0.3-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>ch.weiss</groupId>
+      <groupId>ch.rweiss</groupId>
       <artifactId>jmx-client</artifactId>
-      <version>0.0.2-SNAPSHOT</version>
+      <version>0.0.3-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
