* Add travis-ci build and status in readme

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,36 @@
         </configuration>
       </plugin>
     </plugins>
+    <extensions>
+      <extension>
+        <groupId>io.packagecloud.maven.wagon</groupId>
+        <artifactId>maven-packagecloud-wagon</artifactId>
+        <version>0.0.4</version>
+      </extension>
+    </extensions>
   </build>
+  <repositories>
+    <repository>
+      <id>weissreto-travis</id>
+      <url>https://packagecloud.io/weissreto/travis/maven2</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+  <distributionManagement>
+    <repository>
+      <id>packagecloud-travis</id>
+      <url>packagecloud+https://packagecloud.io/weissreto/travis</url>
+    </repository>
+    <snapshotRepository>
+      <id>packagecloud-travis</id>
+      <url>packagecloud+https://packagecloud.io/weissreto/travis</url>
+    </snapshotRepository>
+  </distributionManagement>    
   
   <dependencies>
     <dependency>
