* Build also the installers for windows and linux in maven lifecycle

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,15 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>installers</id>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
         <configuration>
           <descriptors>
             <descriptor>src/assembly/windows.xml</descriptor>
