* Do not deploy installers to maven repository (because packagecloud does not support deploying of zip files)

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
           </execution>
         </executions>
         <configuration>
+          <attach>false</attach>
           <descriptors>
             <descriptor>src/assembly/windows.xml</descriptor>
             <descriptor>src/assembly/linux.xml</descriptor>
