--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.rweiss</groupId>
   <artifactId>jmx-cli</artifactId>
-  <version>0.1.0</version>
+  <version>0.2.0-SNAPSHOT</version>
     <build>
     <plugins>
       <plugin>
@@ -91,12 +91,12 @@
     <dependency>
       <groupId>ch.rweiss</groupId>
       <artifactId>ansi-terminal-chart</artifactId>
-      <version>0.1.0</version>
+      <version>0.2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>ch.rweiss</groupId>
       <artifactId>jmx-client</artifactId>
-      <version>0.1.0</version>
+      <version>0.2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
