--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,33 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.2</version>
+        <version>3.8.0</version>
+        <executions>
+          <execution>
+            <id>module-compile</id>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+            <configuration>
+              <!-- compile module-info.java to be compatible with java 11 -->
+              <release>11</release>
+              <includes>
+                <include>module-info.java</include>
+              </includes>
+            </configuration>
+          </execution>
+          <execution>
+            <id>default-compile</id>
+            <!-- Compile all other classes to be compatible with java 8 -->
+            <configuration>
+              <excludes>
+                <exclude>module-info.java</exclude>
+              </excludes>
+            </configuration>
+          </execution>
+        </executions>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>8</release>
         </configuration>
       </plugin>
       <plugin>
@@ -19,7 +42,6 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <Automatic-Module-Name>ch.rweiss.jmx.client.cli</Automatic-Module-Name>
               <Built-By>Reto Weiss</Built-By>
               <Implementation-Title>${project.artifactId}</Implementation-Title>
               <Implementation-Vendor>Reto Weiss</Implementation-Vendor>
@@ -106,7 +128,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.3</version>
+      <version>2.9.7</version>
     </dependency>
   </dependencies>
 </project>
