* Provide two different Docker Images one for java 8 and one for java 11

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -1,5 +1,5 @@
-FROM openjdk:8-jre
-RUN wget https://github.com/weissreto/jmx-cli/releases/download/v0.1.0/jmx-cli-0.1.0-linux.zip \
-  && unzip jmx-cli-0.1.0-linux.zip -d /app 
-ENV PATH="/app/jmx-cli-0.1.0/bin:$PATH"  
+FROM openjdk:11-jdk
+RUN wget https://github.com/weissreto/jmx-cli/releases/download/v0.2.0/jmx-cli-0.2.0-linux.zip \
+  && unzip jmx-cli-0.2.0-linux.zip -d /app 
+ENV PATH="/app/jmx-cli-0.2.0/bin:$PATH"  
 CMD /bin/bash 
