--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,10 @@
   <groupId>ch.rweiss</groupId>
   <artifactId>jmcli</artifactId>
   <version>0.3.0-SNAPSHOT</version>
-    <build>
+  <properties>
+    <jackson.version>2.9.7</jackson.version>
+  </properties>
+  <build>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -126,12 +129,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-yaml</artifactId>
-      <version>2.8.11</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.7</version>
+      <version>${jackson.version}</version>
     </dependency>
   </dependencies>
 </project>
