--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <version>0.3.0-SNAPSHOT</version>
   <properties>
     <jackson.version>2.9.7</jackson.version>
+    <picocli.version>3.7.0</picocli.version>
   </properties>
   <build>
     <plugins>
@@ -114,7 +115,7 @@
     <dependency>
       <groupId>info.picocli</groupId>
       <artifactId>picocli</artifactId>
-      <version>2.1.0</version>
+      <version>${picocli.version}</version>
     </dependency>
     <dependency>
       <groupId>ch.rweiss</groupId>
