--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
   <properties>
     <jackson.version>2.9.7</jackson.version>
     <picocli.version>3.7.0</picocli.version>
+    <junit.engine.version>5.3.1</junit.engine.version>
+    <junit.platform.version>1.3.1</junit.platform.version>
+    <assertj.version>3.11.1</assertj.version>    
   </properties>
     
   <dependencies>
@@ -33,6 +36,24 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.engine.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
+      <version>${junit.platform.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assertj.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   
@@ -68,6 +89,10 @@
         <configuration>
           <release>8</release>
         </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
